# Explor.Ar---Proyecto-universitario

./: .env  .gitignore  GUIA_PYTHON.MD  README.md  README_ESP.MD  division.py  programa_principal.py
admin/: .gitignore  ARCHITECTURE.md  README.md  README_MODELS.md  README_PERMISOS.md  REFACTORING_SUMMARY.md  SETUP.md  SYSTEM_PROMPT.MD  config.py  example_usage.py  main.py  pyproject.toml  requirements.txt  run_seeds.py
admin/migrations/: README
admin/migrations/versions/: 02b13edb3795_agregar_first_name_y_last_name_a_user.py  06e1aa23b5e8_merge_multiple_head.py  2018cd29e16a_initial_migration.py  21128261bcc4_nueva_migración.py  3608e1af4698_add_site_images.py  3608e1af4698_add_user_superadmin.py  3656f775392f_add_updated_at_to_historicsitereview.py  4b72c07dd522_merge_user_inheritance_branches.py  4e370c06e57d_manual.py  552c216821aa_fix_merge_user_columns.py  5a695823bd72_initial_migration.py  5c37bd1c72c8_add_avatar_url_to_user_and_make_.py  6541bbdac04e_local_rebuild.py  6e16753250c8_merge_heads.py  747738abb318_add_reviews.py  a7b77b58a3e5_implement_user_inheritance.py  b17fee5ff915_cambiar_restricciã³n_ãºnica_de_mail_a_ã_.py  b67685236135_user_soft_delete_audit_fields.py  cb0b1185f8b2_add_favorite_sites.py  d8220148a9ab_check_for_pending_changes.py  e100c64e414e_initial_migration.py  e376dd61e346_merge_heads.py  fa91da85cc26_.py  xxxxxxxxxxxx_remove_user_deletion_reason.py
admin/scripts/: assign_user_roles.py  bulk_load_images.py  hash_passwords.py  load_historic_sites.py  load_permissions.py  migrate_templates.py  test_permissions.py
admin/src/core/: __init__.py
admin/src/web/: STRUCTURE.md  __init__.py  blueprints.py  blueprints_registry.py  exceptions.py  extensions.py  hooks.py  storage.py  template_filters.py
admin/static/: styles.css
admin/static/css/: styles.css
admin/static/js/: common.js  create_site.js  edit_site.js  events.js  flags.js  home.js  images_manager.js  layout.js  login.js  map_handler.js  reviews.js  (+7 more)
admin/tests/: test_models.py
(+279 files in other folders)
